tests/baselines/reference/typeofAmbientExternalModules.errors.txt
tests/cases/compiler/typeofAmbientExternalModules_2.ts(7,1): error TS2322: Type '类为 D' is not assignable to type '类为 "tests/cases/compiler/typeofAmbientExternalModules_0"'.
  Property 'C' is missing in type '类为 D'.
tests/cases/compiler/typeofAmbientExternalModules_2.ts(9,1): error TS2322: Type '类为 "tests/cases/compiler/typeofAmbientExternalModules_0"' is not assignable to type '类为 D'.
  Property 'prototype' is missing in type '类为 "tests/cases/compiler/typeofAmbientExternalModules_0"'.


==== tests/cases/compiler/typeofAmbientExternalModules_2.ts (2 errors) ====
    ///<reference path='typeofAmbientExternalModules_0.ts'/>
    ///<reference path='typeofAmbientExternalModules_1.ts'/>
    import ext = require('./typeofAmbientExternalModules_0');
    import exp = require('./typeofAmbientExternalModules_1');
    
    var y1: typeof ext = ext;
    y1 = exp;
    ~~
!!! error TS2322: Type '类为 D' is not assignable to type '类为 "tests/cases/compiler/typeofAmbientExternalModules_0"'.
!!! error TS2322:   Property 'C' is missing in type '类为 D'.
    var y2: typeof exp = exp;
    y2 = ext;
    ~~
!!! error TS2322: Type '类为 "tests/cases/compiler/typeofAmbientExternalModules_0"' is not assignable to type '类为 D'.
!!! error TS2322:   Property 'prototype' is missing in type '类为 "tests/cases/compiler/typeofAmbientExternalModules_0"'.
==== tests/cases/compiler/typeofAmbientExternalModules_0.ts (0 errors) ====
    export class C { foo: string; }
    
==== tests/cases/compiler/typeofAmbientExternalModules_1.ts (0 errors) ====
    class D { bar: string; }
    export = D;
    